# codex-chat

./: .gitignore  .swiftformat  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  biome.json  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  pull_request_template.md
.husky/: pre-commit
apps/RemoteControlRelayRust/: .dockerignore  Cargo.toml  Dockerfile  README.md
apps/RemoteControlRelayRust/.cargo/: audit.toml
apps/RemoteControlRelayRust/src/: config.rs  main.rs  model.rs  service.rs
apps/RemoteControlRelayRust/src/service/: auth.rs  metrics.rs  protocol.rs  session.rs  state.rs  tests.rs  transport.rs
apps/RemoteControlRelayRust/src/service/transport/: http.rs  mod.rs  websocket.rs
apps/RemoteControlRelayRust/tests/: relay_integration.rs  relay_load_harness.rs
docs-public/: ADR-EXTENSIONS-PACKAGE-MANIFEST.md  ADR-EXTENSIONS-RUNTIME.md  ADR-MODS-BAR-ACTIONS-AND-GITHUB-SUBDIR-INSTALL.md  ADR-MODS-SCHEMA-RESET-V1.md  ADR-RUNTIME-CONTRACT-VERSIONING.md  ADR-SHARED-CODEX-HOME-ALIGNMENT.md  ARCHITECTURE_CONTRACT.md  CODEX_APP_SERVER_RESPONSE_TAXONOMY.md  CONTRIBUTING.md  DEVELOPER_AGENT_WORKFLOWS.md  EXTENSIONS.md  EXTENSIONS_CURRENT_STATE_AUDIT.md  EXTENSIONS_QUICKSTART.md  EXTENSIONS_SPEC_VNEXT.md  INSTALL.md  MODS.md  MODS_SHARING.md  PERSONAL_ACTIONS.md  README.md  RELEASE.md  REMOTE_CONTROL.md  REMOTE_CONTROL_GA_PLAN.md  REMOTE_CONTROL_GKE_DEPLOYMENT.md  REMOTE_CONTROL_RELAY_RUNBOOK.md  RUNTIME_DATA_RELIABILITY_CONTRACT.md  RUNTIME_LEDGER_REPLAY.md  RUNTIME_MULTI_SESSION_TUNING.md  RUNTIME_POLICY_AS_CODE.md  RUNTIME_RELIABILITY_BUNDLE.md  RUNTIME_RELIABILITY_SLO_DRAFT.md  SECURITY_MODEL.md  STORAGE_REPAIR_RUNBOOK.md
mods/: README.md
scripts/: bootstrap.sh  check-host-app-metadata.sh  gitleaks-check.sh  install-local-git-hooks.sh  knip.sh  oss-smoke.sh  periphery-scan.sh  remote-control-prod-reliability-browser.cjs  remote-control-prod-reliability-harness.mjs  swiftformat.sh  (+19 more)
(+455 files in other folders)
