[package]
name = "remote_control_relay_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
base64 = "0.22"
http = "1.1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
futures-util = "=0.3.31"
redis = { version = "0.27", features = ["tokio-comp"] }
async-nats = { git = "https://github.com/nats-io/nats.rs", rev = "90ac5f198813ad578362bcc3109e73e43f7217c0", package = "async-nats" }
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
proptest = "1.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
